--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,8 @@
 <body>
 <script src="../clubman.js" type="text/javascript"></script>
 <script type="text/javascript">
-   console.log(club.aa()) 
+      console.log(_.version)	
 </script>
+		
 </body>
 </html>
