--- a/test/index.html
+++ b/test/index.html
@@ -5,9 +5,19 @@
   <title>test</title>
 </head>
 <body>
+<ul>
+   <li class="1"></li>
+   <li class="2"></li>
+   <li class="3"></li>
+   <li class="4"></li>
+   <li class="5"></li>
+</ul>
 <script src="../clubman.js" type="text/javascript"></script>
 <script type="text/javascript">
-      console.log(_.version)	
+
+      var ulg = document.getElementsByTagName('li');        
+      
+      console.log(_.makeArray(ulg))	
 </script>
 		
 </body>
